# edelta

./: .gitignore  README.md  pyproject.toml
src/edelta/ae0/: entropyw.py  expand0.py
src/edelta/bbg/: testreq.py
src/edelta/bpr/: basefunc.py  dask_implementation.ipynb  genericray.py  raydaskspyder.1.py  raygpu.py  rayjp.ipynb  rayparallel.py  spy.csv  spy.parquet  spyder.py  spyder2.py  spyder3.py  tsprojection.code-workspace
src/edelta/entropyfuncs/: __init__.py  qkm.py
src/edelta/flow/: config.py  load_data.py  rrun.py  runner.py  testpos.py
src/edelta/latent/: gen.py  kl_prior.py
src/edelta/qvocab/: transformerpos.py
src/edelta/qvocab/older/: runvq.py  testembed.py  train_transformer_vqvae_sub.py
src/edelta/qvocab/older/vqvae2/: example.py
src/edelta/qvocab/quantizer/: vector_quantizer.py
src/edelta/qvocab/skip_sequential/: make_layers.py
src/edelta/qvocab/stochastic/: s_vq_vae.py
src/edelta/qvocab/transformer/: t_encoder.py  test_transformer_vqvae.py  train_transformer_vqvae.py  transformer_vqvae.py  transformer_vqvae1q.py
src/edelta/qvocab/util/: test_util.py
src/edelta/qvocab/vqvae/: test_vqvae.py  train_vqvae.py  vqvae_class.1.py  vqvae_class.py
src/edelta/tem/: encoding.py  trautoenc.py
src/edelta/ttn/: attention.py  basecls.py  grok.py  scratch.py  simple_embedding.py  test_mse.py  vqvae.py
src/edelta/utils/: basefunc.py
